siamese/sentence_bert_online_contastive.ipynb: notebook cleanups

--- a/siamese/sentence_bert_online_contrastive.ipynb
+++ b/siamese/sentence_bert_online_contrastive.ipynb
@@ -1,18 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "CoHvUu3LCys3"
    },
-   "outputs": [],
    "source": [
-    "import os\n",
+    "# Siamese Network with BERT Pooling: Online Contrastive Loss Function\n",
     "\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"\n",
+    "- We train our siamese network with the training data from SemEval 2014.\n",
+    "- We use the **online contrastive loss function**.\n",
+    "- We then run k-NN search with test queries (previously generated for BM25) to produce test query results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Google Colab setups\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\""
+    "This part only gets executed if this notebook is being run under Google Colab. **Please change the working path  directory below in advance!**"
    ]
   },
   {
@@ -86,8 +93,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -106,76 +112,8 @@
     "id": "dup1v7BpN7Gr",
     "outputId": "05764681-f0cd-46e8-ddd7-805c4f834d82"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyserini==0.9.4.0\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a9/ae/cf4a44fbeb6e1f947dfde40fa0142de33ae263333bda26edca914be6ba1b/pyserini-0.9.4.0-py3-none-any.whl (60.4MB)\n",
-      "\u001b[K     |████████████████████████████████| 60.4MB 53kB/s \n",
-      "\u001b[?25hCollecting sentence-transformers==0.3.9\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f5/5a/6e41e8383913dd2ba923cdcd02be2e03911595f4d2f9de559ecbed80d2d3/sentence-transformers-0.3.9.tar.gz (64kB)\n",
-      "\u001b[K     |████████████████████████████████| 71kB 11.3MB/s \n",
-      "\u001b[?25hCollecting transformers==3.4.0\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/2c/4e/4f1ede0fd7a36278844a277f8d53c21f88f37f3754abf76a5d6224f76d4a/transformers-3.4.0-py3-none-any.whl (1.3MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.3MB 50.5MB/s \n",
-      "\u001b[?25hCollecting jsonlines==1.2.0\n",
-      "  Downloading https://files.pythonhosted.org/packages/4f/9a/ab96291470e305504aa4b7a2e0ec132e930da89eb3ca7a82fbe03167c131/jsonlines-1.2.0-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.22.2.post1)\n",
-      "Collecting pyjnius\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d8/50/098cb5fb76fb7c7d99d403226a2a63dcbfb5c129b71b7d0f5200b05de1f0/pyjnius-1.3.0-cp36-cp36m-manylinux2010_x86_64.whl (1.1MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.1MB 48.8MB/s \n",
-      "\u001b[?25hRequirement already satisfied: Cython in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.29.21)\n",
-      "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.4.1)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.18.5)\n",
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.1.4)\n",
-      "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (4.41.1)\n",
-      "Requirement already satisfied: torch>=1.6.0 in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (1.7.0+cu101)\n",
-      "Requirement already satisfied: nltk in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (3.2.5)\n",
-      "Collecting sacremoses\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7d/34/09d19aff26edcc8eb2a01bed8e98f13a1537005d31e95233fd48216eed10/sacremoses-0.0.43.tar.gz (883kB)\n",
-      "\u001b[K     |████████████████████████████████| 890kB 45.8MB/s \n",
-      "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (2.23.0)\n",
-      "Requirement already satisfied: protobuf in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (3.12.4)\n",
-      "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (3.0.12)\n",
-      "Requirement already satisfied: packaging in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (20.4)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (2019.12.20)\n",
-      "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.8)\n",
-      "Collecting sentencepiece!=0.1.92\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e5/2d/6d4ca4bef9a67070fa1cac508606328329152b1df10bdf31fb6e4e727894/sentencepiece-0.1.94-cp36-cp36m-manylinux2014_x86_64.whl (1.1MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.1MB 32.6MB/s \n",
-      "\u001b[?25hCollecting tokenizers==0.9.2\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7c/a5/78be1a55b2ac8d6a956f0a211d372726e2b1dd2666bb537fea9b03abd62c/tokenizers-0.9.2-cp36-cp36m-manylinux1_x86_64.whl (2.9MB)\n",
-      "\u001b[K     |████████████████████████████████| 2.9MB 52.9MB/s \n",
-      "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from jsonlines==1.2.0->-r requirements.txt (line 4)) (1.15.0)\n",
-      "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.17.0)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas->pyserini==0.9.4.0->-r requirements.txt (line 1)) (2018.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas->pyserini==0.9.4.0->-r requirements.txt (line 1)) (2.8.1)\n",
-      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.6/dist-packages (from torch>=1.6.0->sentence-transformers==0.3.9->-r requirements.txt (line 2)) (3.7.4.3)\n",
-      "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from torch>=1.6.0->sentence-transformers==0.3.9->-r requirements.txt (line 2)) (0.16.0)\n",
-      "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers==3.4.0->-r requirements.txt (line 3)) (7.1.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (2020.11.8)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (3.0.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (2.10)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (1.24.3)\n",
-      "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf->transformers==3.4.0->-r requirements.txt (line 3)) (50.3.2)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->transformers==3.4.0->-r requirements.txt (line 3)) (2.4.7)\n",
-      "Building wheels for collected packages: sentence-transformers, sacremoses\n",
-      "  Building wheel for sentence-transformers (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Created wheel for sentence-transformers: filename=sentence_transformers-0.3.9-cp36-none-any.whl size=101036 sha256=ec39f73f2a886f6cc14cec7ff3456085f6f0df5294be9d6b98a3f8b96d8670d7\n",
-      "  Stored in directory: /root/.cache/pip/wheels/fc/89/43/f2f5bc00b03ef9724b0f6254a97eaf159a4c4ddc024b33e07a\n",
-      "  Building wheel for sacremoses (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Created wheel for sacremoses: filename=sacremoses-0.0.43-cp36-none-any.whl size=893257 sha256=186acd5cd3daf95c64623b1c399275cb888ad73725011392106b8572062d45cc\n",
-      "  Stored in directory: /root/.cache/pip/wheels/29/3c/fd/7ce5c3f0666dab31a50123635e6fb5e19ceb42ce38d4e58f45\n",
-      "Successfully built sentence-transformers sacremoses\n",
-      "Installing collected packages: pyjnius, pyserini, sacremoses, sentencepiece, tokenizers, transformers, sentence-transformers, jsonlines\n",
-      "Successfully installed jsonlines-1.2.0 pyjnius-1.3.0 pyserini-0.9.4.0 sacremoses-0.0.43 sentence-transformers-0.3.9 sentencepiece-0.1.94 tokenizers-0.9.2 transformers-3.4.0\n"
-     ]
-    }
-   ],
    "source": [
-    "!pip install -r requirements.txt"
+    "## PyTorch GPU setup"
    ]
   },
   {
@@ -257,6 +195,13 @@
     "else:\n",
     "    torch_device = torch.device('cpu')\n",
     "    use_pin_memory = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import packages"
    ]
   },
   {
@@ -415,7 +360,11 @@
     "id": "-OD20Xch1zJQ"
    },
    "source": [
-    "## SBERT Model"
+    "## Siamese Network with BERT Pooling (SBERT) Model\n",
+    "\n",
+    "- We use the pretrained weights released by the BERT-ADA authors.\n",
+    "- Please download and extract them to the same directory as this notebook: https://github.com/deepopinion/domain-adapted-atsc#release-of-bert-language-models-finetuned-on-a-specific-domain\n",
+    "    - **NOTE**: Because BERT-ADA was trained with an older version of `transformers`, you need to add `\"model_type\": \"bert\"` to `config.json`."
    ]
   },
   {
@@ -1141,7 +1090,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save(os.path.join('.', 'Siamese', sbert_new_model_name))"
+    "model.save(sbert_new_model_name)"
    ]
   },
   {
@@ -1172,8 +1121,8 @@
    },
    "outputs": [],
    "source": [
-    "# Load the existing trained model here\n",
-    "model = sentence_transformers.SentenceTransformer(os.path.join(sbert_new_model_name))"
+    "# Uncomment the following line to load the existing trained model.\n",
+    "# model = sentence_transformers.SentenceTransformer(sbert_new_model_name)"
    ]
   },
   {
@@ -1216,7 +1165,8 @@
    },
    "outputs": [],
    "source": [
-    "top_k = 1000"
+    "# Get the top k matches from k-NN search\n",
+    "top_k = 400"
    ]
   },
   {
@@ -1225,7 +1175,7 @@
     "id": "VIA1mcWS2FXH"
    },
    "source": [
-    "### `trec_eval` evaluation: Laptop"
+    "### Generate query results file for `trec_eval` evaluation: Laptop"
    ]
   },
   {
@@ -1236,7 +1186,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_documents_path = os.path.join('.', 'data', 'collection_no_metadata', 'laptop_test.jsonl')\n",
+    "test_laptop_documents_path = os.path.join('..', 'BM25', 'collection', 'laptop_test.jsonl')\n",
     "test_laptop_documents_file = jsonlines.open(test_laptop_documents_path)"
    ]
   },
@@ -1276,7 +1226,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_queries_path = os.path.join('.', 'BM25', 'test_queries_laptop.txt')\n",
+    "test_laptop_queries_path = os.path.join('..', 'BM25', 'test_queries_laptop.txt')\n",
     "test_laptop_queries = open(test_laptop_queries_path, 'r').readlines()"
    ]
   },
@@ -1288,7 +1238,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_result_path = os.path.join('.', 'Siamese_results', sbert_new_model_name, 'top_' + str(top_k))\n",
+    "test_laptop_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_laptop_result_path).mkdir(parents=True, exist_ok=True)\n",
     "test_laptop_result_file = 'query_results_laptop_' + sbert_new_model_name + '.txt'"
    ]
@@ -2328,7 +2278,7 @@
     "id": "af6kMAmYEvyq"
    },
    "source": [
-    "### `trec_eval` evaluation: Restaurants"
+    "### Generate query results file for `trec_eval` evaluation: Restaurant"
    ]
   },
   {
@@ -2339,7 +2289,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_documents_path = os.path.join('.', 'data', 'collection_no_metadata', 'restaurant_test.jsonl')\n",
+    "test_restaurants_documents_path = os.path.join('..', 'BM25', 'collection', 'restaurant_test.jsonl')\n",
     "test_restaurants_documents_file = jsonlines.open(test_restaurants_documents_path)"
    ]
   },
@@ -2369,7 +2319,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_queries_path = os.path.join('.', 'BM25', 'test_queries_restaurant.txt')\n",
+    "test_restaurants_queries_path = os.path.join('..', 'BM25', 'test_queries_restaurant.txt')\n",
     "test_restaurants_queries = open(test_restaurants_queries_path, 'r').readlines()"
    ]
   },
@@ -2381,7 +2331,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_result_path = os.path.join('.', 'Siamese_results', sbert_new_model_name, 'top_' + str(top_k))\n",
+    "test_restaurants_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_restaurants_result_path).mkdir(parents=True, exist_ok=True)\n",
     "test_restaurants_result_file = 'query_results_restaurants_' + sbert_new_model_name + '.txt'"
    ]
