siamese/sentence_bert_softmax.ipynb: notebook cleanups

--- a/siamese/sentence_bert_softmax.ipynb
+++ b/siamese/sentence_bert_softmax.ipynb
@@ -1,16 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
+    "# Siamese Network with BERT Pooling: Softmax Loss Function\n",
     "\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"\n",
+    "- We train our siamese network with the training data from SemEval 2014.\n",
+    "- We use the **softmax loss function**.\n",
+    "- We then run k-NN search with test queries (previously generated for BM25) to produce test query results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Google Colab setups\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"2\""
+    "This part only gets executed if this notebook is being run under Google Colab. **Please change the working path  directory below in advance!**"
    ]
   },
   {
@@ -65,8 +72,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -85,52 +91,8 @@
     "id": "dup1v7BpN7Gr",
     "outputId": "09096543-464d-4be5-c22c-ea6f24ba2020"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pyserini==0.9.4.0 in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 1)) (0.9.4.0)\n",
-      "Requirement already satisfied: sentence-transformers==0.3.9 in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 2)) (0.3.9)\n",
-      "Requirement already satisfied: transformers==3.4.0 in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 3)) (3.4.0)\n",
-      "Requirement already satisfied: jsonlines==1.2.0 in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 4)) (1.2.0)\n",
-      "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.23.2)\n",
-      "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.5.4)\n",
-      "Requirement already satisfied: pyjnius in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.3.0)\n",
-      "Requirement already satisfied: Cython in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.29.21)\n",
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.1.4)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.18.4)\n",
-      "Requirement already satisfied: torch>=1.6.0 in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (1.7.0+cu110)\n",
-      "Requirement already satisfied: nltk in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (3.5)\n",
-      "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (4.53.0)\n",
-      "Requirement already satisfied: protobuf in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (3.13.0)\n",
-      "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (2.25.0)\n",
-      "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (3.0.12)\n",
-      "Requirement already satisfied: sacremoses in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.0.43)\n",
-      "Requirement already satisfied: tokenizers==0.9.2 in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.9.2)\n",
-      "Requirement already satisfied: sentencepiece!=0.1.92 in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.1.91)\n",
-      "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.8)\n",
-      "Requirement already satisfied: packaging in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (20.4)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (2020.11.13)\n",
-      "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from jsonlines==1.2.0->-r requirements.txt (line 4)) (1.15.0)\n",
-      "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.17.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->pyserini==0.9.4.0->-r requirements.txt (line 1)) (2.1.0)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas->pyserini==0.9.4.0->-r requirements.txt (line 1)) (2020.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas->pyserini==0.9.4.0->-r requirements.txt (line 1)) (2.8.1)\n",
-      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.6/dist-packages (from torch>=1.6.0->sentence-transformers==0.3.9->-r requirements.txt (line 2)) (3.7.4.3)\n",
-      "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from torch>=1.6.0->sentence-transformers==0.3.9->-r requirements.txt (line 2)) (0.18.2)\n",
-      "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from nltk->sentence-transformers==0.3.9->-r requirements.txt (line 2)) (7.1.2)\n",
-      "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf->transformers==3.4.0->-r requirements.txt (line 3)) (50.3.2)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (3.0.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (1.26.2)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /usr/lib/python3/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (2.6)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (2020.11.8)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->transformers==3.4.0->-r requirements.txt (line 3)) (2.4.7)\n"
-     ]
-    }
-   ],
    "source": [
-    "!pip install -r requirements.txt"
+    "## PyTorch GPU setup"
    ]
   },
   {
@@ -213,6 +175,13 @@
     "else:\n",
     "    torch_device = torch.device('cpu')\n",
     "    use_pin_memory = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import packages"
    ]
   },
   {
@@ -388,7 +357,11 @@
     "id": "-OD20Xch1zJQ"
    },
    "source": [
-    "## SBERT Model"
+    "## Siamese Network with BERT Pooling (SBERT) Model\n",
+    "\n",
+    "- We use the pretrained weights released by the BERT-ADA authors.\n",
+    "- Please download and extract them to the same directory as this notebook: https://github.com/deepopinion/domain-adapted-atsc#release-of-bert-language-models-finetuned-on-a-specific-domain\n",
+    "    - **NOTE**: Because BERT-ADA was trained with an older version of `transformers`, you need to add `\"model_type\": \"bert\"` to `config.json`."
    ]
   },
   {
@@ -750,7 +723,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save(os.path.join('.', 'Siamese', sbert_new_model_name))"
+    "model.save(sbert_new_model_name)"
    ]
   },
   {
@@ -770,8 +743,8 @@
    },
    "outputs": [],
    "source": [
-    "# Load the existing trained model here\n",
-    "# model = sentence_transformers.SentenceTransformer(os.path.join('.', 'Siamese', sbert_new_model_name))"
+    "# Uncomment the following line to load the existing trained model.\n",
+    "# model = sentence_transformers.SentenceTransformer(sbert_new_model_name)"
    ]
   },
   {
@@ -805,7 +778,8 @@
    },
    "outputs": [],
    "source": [
-    "top_k = 1000"
+    "# Get the top k matches from k-NN search\n",
+    "top_k = 400"
    ]
   },
   {
@@ -814,7 +788,7 @@
     "id": "VIA1mcWS2FXH"
    },
    "source": [
-    "### `trec_eval` evaluation: Laptop"
+    "### Generate query results file for `trec_eval` evaluation: Laptop"
    ]
   },
   {
@@ -825,7 +799,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_documents_path = os.path.join('.', 'data', 'collection_no_metadata', 'laptop_test.jsonl')\n",
+    "test_laptop_documents_path = os.path.join('..', 'BM25', 'collection', 'laptop_test.jsonl')\n",
     "test_laptop_documents_file = jsonlines.open(test_laptop_documents_path)"
    ]
   },
@@ -865,7 +839,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_queries_path = os.path.join('.', 'BM25', 'test_queries_laptop.txt')\n",
+    "test_laptop_queries_path = os.path.join('..', 'BM25', 'test_queries_laptop.txt')\n",
     "test_laptop_queries = open(test_laptop_queries_path, 'r').readlines()"
    ]
   },
@@ -877,7 +851,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_result_path = os.path.join('.', 'Siamese_results', sbert_new_model_name, 'top_' + str(top_k))\n",
+    "test_laptop_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_laptop_result_path).mkdir(parents=True, exist_ok=True)\n",
     "test_laptop_result_file = 'query_results_laptop_' + sbert_new_model_name + '.txt'"
    ]
@@ -947,7 +921,7 @@
     "id": "af6kMAmYEvyq"
    },
    "source": [
-    "### `trec_eval` evaluation: Restaurants"
+    "### Generate query results file for `trec_eval` evaluation: Restaurant"
    ]
   },
   {
@@ -969,7 +943,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_documents_path = os.path.join('.', 'data', 'collection_no_metadata', 'restaurant_test.jsonl')\n",
+    "test_restaurants_documents_path = os.path.join('..', 'BM25', 'collection', 'restaurant_test.jsonl')\n",
     "test_restaurants_documents_file = jsonlines.open(test_restaurants_documents_path)"
    ]
   },
@@ -1021,7 +995,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_queries_path = os.path.join('.', 'BM25', 'test_queries_restaurant.txt')\n",
+    "test_restaurants_queries_path = os.path.join('..', 'BM25', 'test_queries_restaurant.txt')\n",
     "test_restaurants_queries = open(test_restaurants_queries_path, 'r').readlines()"
    ]
   },
@@ -1044,7 +1018,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_result_path = os.path.join('.', 'Siamese_results', sbert_new_model_name, 'top_' + str(top_k))\n",
+    "test_restaurants_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_restaurants_result_path).mkdir(parents=True, exist_ok=True)\n",
     "test_restaurants_result_file = 'query_results_restaurants_' + sbert_new_model_name + '.txt'"
    ]
