bm25 and siamese: make paths follow the same rules

--- a/siamese/sentence_bert_contrastive.ipynb
+++ b/siamese/sentence_bert_contrastive.ipynb
@@ -1091,7 +1091,7 @@
    },
    "outputs": [],
    "source": [
-    "# Get the top k matches from k-NN search\n",
+    "# Get the top k matches\n",
     "top_k = 800"
    ]
   },
@@ -1112,7 +1112,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_documents_path = os.path.join('..', 'BM25', 'collection', 'laptop_test.jsonl')\n",
+    "test_laptop_documents_path = os.path.join('..', 'bm25', 'collection', 'laptop_test.jsonl')\n",
     "test_laptop_documents_file = jsonlines.open(test_laptop_documents_path)"
    ]
   },
@@ -1152,7 +1152,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_queries_path = os.path.join('..', 'BM25', 'test_queries_laptop.txt')\n",
+    "test_laptop_queries_path = os.path.join('..', 'bm25', 'test_queries_laptop.txt')\n",
     "test_laptop_queries = open(test_laptop_queries_path, 'r').readlines()"
    ]
   },
@@ -1166,7 +1166,7 @@
    "source": [
     "test_laptop_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_laptop_result_path).mkdir(parents=True, exist_ok=True)\n",
-    "test_laptop_result_file = 'query_results_laptop_' + sbert_new_model_name + '.txt'"
+    "test_laptop_result_file = 'test_results_laptop_' + sbert_new_model_name + '.txt'"
    ]
   },
   {
@@ -2190,7 +2190,7 @@
     "    i = 0\n",
     "\n",
     "    for score, idx in zip(top_results[0], top_results[1]):\n",
-    "        line = str(q_num+1) + ' Q0 ' + test_laptop_documents_id[idx] + ' ' + str(i+1) + ' ' + '%.8f' % score + ' galago'\n",
+    "        line = str(q_num+1) + ' Q0 ' + test_laptop_documents_id[idx] + ' ' + str(i+1) + ' ' + '%.8f' % score + ' ' + sbert_new_model_name\n",
     "\n",
     "        i = i + 1\n",
     "      \n",
@@ -2226,7 +2226,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_documents_path = os.path.join('..', 'BM25', 'collection', 'restaurant_test.jsonl')\n",
+    "test_restaurants_documents_path = os.path.join('..', 'bm25', 'collection', 'restaurant_test.jsonl')\n",
     "test_restaurants_documents_file = jsonlines.open(test_restaurants_documents_path)"
    ]
   },
@@ -2278,7 +2278,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_queries_path = os.path.join('..', 'BM25', 'test_queries_restaurant.txt')\n",
+    "test_restaurants_queries_path = os.path.join('..', 'bm25', 'test_queries_restaurant.txt')\n",
     "test_restaurants_queries = open(test_restaurants_queries_path, 'r').readlines()"
    ]
   },
@@ -2301,9 +2301,9 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_result_path = os.path.join('.', 'Siamese_results', sbert_new_model_name, 'top_' + str(top_k))\n",
+    "test_restaurants_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_restaurants_result_path).mkdir(parents=True, exist_ok=True)\n",
-    "test_restaurants_result_file = 'query_results_restaurants_' + sbert_new_model_name + '.txt'"
+    "test_restaurants_result_file = 'test_results_restaurant_' + sbert_new_model_name + '.txt'"
    ]
   },
   {
@@ -3667,20 +3667,13 @@
     "    i = 0\n",
     "\n",
     "    for score, idx in zip(top_results[0], top_results[1]):\n",
-    "        line = str(q_num+1) + ' Q0 ' + test_restaurants_documents_id[idx] + ' ' + str(i+1) + ' ' + '%.8f' % score + ' galago'\n",
+    "        line = str(q_num+1) + ' Q0 ' + test_restaurants_documents_id[idx] + ' ' + str(i+1) + ' ' + '%.8f' % score + ' ' + sbert_new_model_name\n",
     "\n",
     "        i = i + 1\n",
     "      \n",
     "        with open(os.path.join(test_restaurants_result_path, test_restaurants_result_file), 'a') as f:\n",
     "            f.write(\"%s\\n\" % line)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
