--- a/bm25/02_run_bm25.ipynb
+++ b/bm25/02_run_bm25.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "if use_colab and colab_available:\n",
     "    # If there are packages I need to install separately, do it here\n",
-    "    !pip install pyserini==0.9.4.0 jsonlines==1.2.0\n",
+    "    !pip install pyserini==0.9.4.0\n",
     "\n",
     "    # Mount Google Drive\n",
     "    drive.mount('/content/drive')\n",
@@ -112,7 +112,24 @@
     "id": "W77qx3Pyg9j5"
    },
    "source": [
-    "## Run BM25 on test queries (Laptop)"
+    "## Run BM25 on test queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the top k matches\n",
+    "top_k = 800"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Laptop"
    ]
   },
   {
@@ -136,7 +153,7 @@
    "source": [
     "index_path_laptop = os.path.join('.', 'index', 'laptop_test')\n",
     "queries_path_laptop = os.path.join('test_queries_laptop.txt')\n",
-    "results_path_laptop = os.path.join('test_results_laptop.txt')"
+    "results_path_laptop = os.path.join('test_results_laptop_bm25.txt')"
    ]
   },
   {
@@ -197,7 +214,7 @@
     "    for query in f:\n",
     "        q_num += 1\n",
     "        \n",
-    "        hits = searcher_laptop.search(q=query, k=800)\n",
+    "        hits = searcher_laptop.search(q=query, k=top_k)\n",
     "\n",
     "        for i in range(len(hits)):\n",
     "            line = str(q_num) + ' Q0 ' + hits[i].docid + ' ' + str(i+1) + ' ' + '%.8f' % hits[i].score + ' bm25'\n",
@@ -210,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run BM25 on test queries (Restaurant)"
+    "### Restaurant"
    ]
   },
   {
@@ -221,7 +238,7 @@
    "source": [
     "index_path_restaurant = os.path.join('.', 'index', 'restaurant_test')\n",
     "queries_path_restaurant = os.path.join('test_queries_restaurant.txt')\n",
-    "results_path_restaurant = os.path.join('test_results_restaurant.txt')"
+    "results_path_restaurant = os.path.join('test_results_restaurant_bm25.txt')"
    ]
   },
   {
@@ -262,7 +279,7 @@
     "    for query in f:\n",
     "        q_num += 1\n",
     "        \n",
-    "        hits = searcher_restaurant.search(q=query, k=800)\n",
+    "        hits = searcher_restaurant.search(q=query, k=top_k)\n",
     "\n",
     "        for i in range(len(hits)):\n",
     "            line = str(q_num) + ' Q0 ' + hits[i].docid + ' ' + str(i+1) + ' ' + '%.8f' % hits[i].score + ' bm25'\n",
@@ -270,13 +287,6 @@
     "            with open(results_path_restaurant, 'a') as f:\n",
     "                f.write(\"%s\\n\" % line)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
