--- a/siamese/sentence_bert_cosine.ipynb
+++ b/siamese/sentence_bert_cosine.ipynb
@@ -62,7 +62,7 @@
     "    drive.mount('/content/drive')\n",
     "    \n",
     "    # If there's a package I need to install separately, do it here\n",
-    "    #!pip install sentence-transformers==0.3.9 transformers==3.4.0\n",
+    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0\n",
     "\n",
     "    # cd to the appropriate working directory under my Google Drive\n",
     "    %cd '/content/drive/My Drive/CS646_Final_Project'\n",
@@ -788,7 +788,7 @@
    },
    "outputs": [],
    "source": [
-    "# Get the top k matches from k-NN search\n",
+    "# Get the top k matches\n",
     "top_k = 800"
    ]
   },
@@ -809,7 +809,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_documents_path = os.path.join('..', 'BM25', 'collection', 'laptop_test.jsonl')\n",
+    "test_laptop_documents_path = os.path.join('..', 'bm25', 'collection', 'laptop_test.jsonl')\n",
     "test_laptop_documents_file = jsonlines.open(test_laptop_documents_path)"
    ]
   },
@@ -849,7 +849,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_queries_path = os.path.join('..', 'BM25', 'test_queries_laptop.txt')\n",
+    "test_laptop_queries_path = os.path.join('..', 'bm25', 'test_queries_laptop.txt')\n",
     "test_laptop_queries = open(test_laptop_queries_path, 'r').readlines()"
    ]
   },
@@ -863,7 +863,7 @@
    "source": [
     "test_laptop_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_laptop_result_path).mkdir(parents=True, exist_ok=True)\n",
-    "test_laptop_result_file = 'query_results_laptop_' + sbert_new_model_name + '.txt'"
+    "test_laptop_result_file = 'test_results_laptop_' + sbert_new_model_name + '.txt'"
    ]
   },
   {
@@ -917,7 +917,7 @@
     "    i = 0\n",
     "\n",
     "    for score, idx in zip(top_results[0], top_results[1]):\n",
-    "        line = str(q_num+1) + ' Q0 ' + test_laptop_documents_id[idx] + ' ' + str(i+1) + ' ' + '%.8f' % score + ' galago'\n",
+    "        line = str(q_num+1) + ' Q0 ' + test_laptop_documents_id[idx] + ' ' + str(i+1) + ' ' + '%.8f' % score + ' ' + sbert_new_model_name\n",
     "\n",
     "        i = i + 1\n",
     "      \n",
@@ -953,7 +953,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_documents_path = os.path.join('..', 'BM25', 'collection', 'restaurant_test.jsonl')\n",
+    "test_restaurants_documents_path = os.path.join('..', 'bm25', 'collection', 'restaurant_test.jsonl')\n",
     "test_restaurants_documents_file = jsonlines.open(test_restaurants_documents_path)"
    ]
   },
@@ -1005,7 +1005,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_queries_path = os.path.join('..', 'BM25', 'test_queries_restaurant.txt')\n",
+    "test_restaurants_queries_path = os.path.join('..', 'bm25', 'test_queries_restaurant.txt')\n",
     "test_restaurants_queries = open(test_restaurants_queries_path, 'r').readlines()"
    ]
   },
@@ -1030,7 +1030,7 @@
    "source": [
     "test_restaurants_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_restaurants_result_path).mkdir(parents=True, exist_ok=True)\n",
-    "test_restaurants_result_file = 'query_results_restaurants_' + sbert_new_model_name + '.txt'"
+    "test_restaurants_result_file = 'test_results_restaurant_' + sbert_new_model_name + '.txt'"
    ]
   },
   {
@@ -1084,7 +1084,7 @@
     "    i = 0\n",
     "\n",
     "    for score, idx in zip(top_results[0], top_results[1]):\n",
-    "        line = str(q_num+1) + ' Q0 ' + test_restaurants_documents_id[idx] + ' ' + str(i+1) + ' ' + '%.8f' % score + ' galago'\n",
+    "        line = str(q_num+1) + ' Q0 ' + test_restaurants_documents_id[idx] + ' ' + str(i+1) + ' ' + '%.8f' % score + ' ' + sbert_new_model_name\n",
     "\n",
     "        i = i + 1\n",
     "      \n",
