merge/merge.ipynb: cleanups

--- a/merge/merge.ipynb
+++ b/merge/merge.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 14873,
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 454,
@@ -140,8 +140,15 @@
     "siamese_result_laptop_path = os.path.join(\n",
     "    '..', 'siamese', 'query_results',\n",
     "    'sbert_bert_ada_joint_online_contrastive', 'top_800',\n",
-    "    'test_results_laptop_sbert_bert_ada_joint_online_contrastive.txt')\n",
-    "\n",
+    "    'test_results_laptop_sbert_bert_ada_joint_online_contrastive.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bm25_result_restaurant_path = os.path.join('..', 'bm25', 'test_results_restaurant_bm25.txt')\n",
     "\n",
     "bm25_result_laptop_path = os.path.join('..', 'bm25', 'test_results_laptop_bm25.txt')"
@@ -149,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "avg_laptop_result_path = os.path.join('query_results', 'test_results_laptop_merge.txt')\n",
+    "avg_restaurant_result_path = os.path.join('query_results', 'test_results_restaurant_merge.txt')\n",
     "\n",
-    "avg_restaurant_result_path = os.path.join('query_results', 'test_results_restaurant_merge.txt')"
+    "avg_laptop_result_path = os.path.join('query_results', 'test_results_laptop_merge.txt')"
    ]
   },
   {
@@ -164,12 +171,12 @@
     "id": "4JrkUbSTaKP6"
    },
    "source": [
-    "## Combine two search results"
+    "## Combine two search results for each domain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 441,
@@ -199,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 8984,
@@ -241,7 +248,6 @@
     "    min_ = min(merged_query_docs_rest[qid]['score'])\n",
     "\n",
     "    if len(merged_query_docs_rest[qid]['score']) <= 1:\n",
-    "        # merged_query_docs_rest[qid]['score'][0] = 0.5\n",
     "        merged_query_docs_rest[qid]['score'][0] = 1\n",
     "        continue\n",
     "\n",
@@ -263,10 +269,7 @@
     "                'score': []\n",
     "            }\n",
     "\n",
-    "        #if docid not in merged_query_docs_rest[qid]['docid']:\n",
-    "        #    merged_query_docs_rest[qid]['docid'].append(docid)\n",
-    "        #    merged_query_docs_rest[qid]['score'].append(score)\n",
-    "        #else:\n",
+    "        # Only consider the documents that are picked up by BM25\n",
     "        if docid in merged_query_docs_rest[qid]['docid']:\n",
     "            ind = merged_query_docs_rest[qid]['docid'].index(docid)\n",
     "            prev_score = float(merged_query_docs_rest[qid]['score'][ind])\n",
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +314,6 @@
     "    min_ = min(merged_query_docs_lap[qid]['score'])\n",
     "\n",
     "    if len(merged_query_docs_lap[qid]['score']) <= 1:\n",
-    "        # merged_query_docs_rest[qid]['score'][0] = 0.5\n",
     "        merged_query_docs_lap[qid]['score'][0] = 1\n",
     "        continue\n",
     "\n",
@@ -333,10 +335,7 @@
     "                'score': []\n",
     "            }\n",
     "\n",
-    "        #if docid not in merged_query_docs_rest[qid]['docid']:\n",
-    "        #    merged_query_docs_rest[qid]['docid'].append(docid)\n",
-    "        #    merged_query_docs_rest[qid]['score'].append(score)\n",
-    "        #else:\n",
+    "        # Only consider the documents that are picked up by BM25\n",
     "        if docid in merged_query_docs_lap[qid]['docid']:\n",
     "            ind = merged_query_docs_lap[qid]['docid'].index(docid)\n",
     "            prev_score = float(merged_query_docs_lap[qid]['score'][ind])\n",
@@ -359,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -383,14 +382,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "merged_results/merge_results_avg_restaurant.txt\n"
+      "query_results/test_results_restaurant_merge.txt\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "642it [00:01, 448.87it/s]\n"
+      "642it [00:02, 255.52it/s]\n"
      ]
     }
    ],
@@ -427,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -451,14 +450,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "merged_results/merge_results_avg_laptop.txt\n"
+      "query_results/test_results_laptop_merge.txt\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "475it [00:00, 682.48it/s]\n"
+      "475it [00:01, 419.00it/s]\n"
      ]
     }
    ],
